# Football-Highlights-Wizard-Brazil

./: .gitignore  README.md  mainWindow.cpp  mainWindow.h
Football Highlight Wizard/: CMakeLists.txt  highlightWizard.cpp  highlightWizard.h  main.cpp
